--- a/templates/https/guide.html
+++ b/templates/https/guide.html
@@ -31,7 +31,7 @@
       </ul>
 
 
-      De resultaten van Pulse komen geautomatiseerd tot stand en het kan zijn dat er fouten tussen zitten. We proberen maandelijks alle domeinen opnieuw te analyseren zodat de resultaten up to date blijven. We bieden geen individuele hulp bij het oplossen van HTTPS problemen. Desalniettemin staat hieronder handige informatie en tips om een betere score op Pulse te bewerkstelligen voor je domein. Voor andere vragen, bekijk onze <a href="/about/">Veelgestelde vragen</a>.</h3>
+      De resultaten van Pulse komen geautomatiseerd tot stand en het kan zijn dat er fouten tussen zitten. We proberen maandelijks alle domeinen opnieuw te analyseren zodat de resultaten up to date blijven. We bieden geen individuele hulp bij het oplossen van HTTPS problemen. Desalniettemin staan hieronder handige tips en informatie om een betere score op Pulse te bewerkstelligen voor je domein.</h3>
       <br>
       <br>
 
