--- a/templates/404.html
+++ b/templates/404.html
@@ -9,7 +9,7 @@
 <section id="main-content">
   <h2>404</h2>
 
-  <p>If you think you've found an error, please visit our repository at <a href="https://github.com/18F/pulse" title="Code Repository on GitHub">github.com/18F/pulse/</a> to file an issue or contribute.</p>
+  <p>Als je een fout gevonden hebt, bezoek dan <a href="https://github.com/openstate/docker-pulse" title="Code Repository op GitHub">github.com/openstate/docker-pulse</a> om er melding van te maken of om het op te lossen.</p>
 
 </section>
 
