--- a/templates/https/guide.html
+++ b/templates/https/guide.html
@@ -80,6 +80,16 @@
 
       <article>
 
+        <h4>Historische resultaten</h4>
+
+        <p>
+        De huidige scanresultaten kunnen makkelijk gedownload worden door bovenaan de 'Per Domein'-tabel op 'Download CSV' te klikken. De resultaten van alle voorgaande scans zijn te vinden op ons dataportaal: <a href="https://data.openstate.eu/dataset/pulse-scan-van-https-bij-overheidsdomeinen" target="_blank">https://data.openstate.eu</a>.
+        </p>
+
+      </article>
+
+      <article>
+
         <h4>Velden</h4>
 
         <ul>
