--- a/templates/https-zorg/domains.html
+++ b/templates/https-zorg/domains.html
@@ -11,8 +11,7 @@
 <section id="main-content" class="white-bkg">
 
   <nav class="tab-menu" role="tablist">
-    <span class="tab" role="tab" aria-controls="tab-panel" aria-selected="true">Per Domein</span>
-    <a href="/https-zorg/agencies/" class="tab" role="tab" aria-controls="tab-panel" aria-selected="false">Per Zorginstelling</a>
+    <span class="tab zorg" role="tab" aria-controls="tab-panel" aria-selected="true">Per Domein</span>
     <a href="/https-zorg/guidance/" class="tab" role="tab" aria-controls="tab-panel" aria-selected="false">Info</a>
   </nav>
 
@@ -28,7 +27,6 @@
           <th class="min-tablet">Dwingt HTTPS Af</th>
           <th class="min-tablet-l">Strict Transport Security (HSTS)</th>
           <th class="min-tablet-l">Preloaded (aanbevolen)</th>
-          <th class="min-tablet-l">SSL Labs Klasse</th>
           <th class="none" scope="col"></th>
         </tr>
       </thead>
