--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -6,7 +6,10 @@
         </h1>
         <ul id="right-nav">
             <li>
-                <a href="/https/domains/">HTTPS</a>
+                <a href="/https/domains/">Overheid</a>
+            </li>
+            <li>
+                <a href="/https-zorg/domains/">Zorg</a>
             </li>
             <li>
                 <a tabindex="-1" href="#contact">Contact</a>
@@ -22,7 +25,10 @@
         <a tabindex="-1" href="/">Home</a>
       </li>
       <li>
-          <a tabindex="-1" href="/https/domains/">HTTPS</a>
+          <a tabindex="-1" href="/https/domains/">Overheid</a>
+      </li>
+      <li>
+          <a tabindex="-1" href="/https-zorg/domains/">Zorg</a>
       </li>
       <li>
           <a tabindex="-1" href="#contact">Contact</a>
