--- a/templates/includes/https/header.html
+++ b/templates/includes/https/header.html
@@ -7,7 +7,7 @@
     </div>
 
     <div class="description">
-      <h2>Veilig HTTP (HTTPS)</h2>
+      <h2>Veilig HTTP (HTTPS) bij de overheid</h2>
       <h3>Laatst bijgewerkt <strong>{{ scan_date | date("%d-%m-%Y") }}</strong></h3>
       <p>
       Deze data laat zien of overheidswebsites ondersteuning bieden voor het HTTPS protocol (<code>https://</code>) en hoe sterk de implementatie daarvan is. HTTPS zorgt voor een veilige en niet manipuleerbare internetverbinding tussen websites en haar bezoekers.
