--- a/templates/includes/https-zorg/header.html
+++ b/templates/includes/https-zorg/header.html
@@ -8,13 +8,13 @@
 
     <div class="description">
       <h2>Veilig HTTP (HTTPS) in de zorg</h2>
-      <h3>Laatst bijgewerkt <strong>{{ scan_date | date("%d-%m-%Y") }}</strong></h3>
+      <h3>Laatst bijgewerkt <strong>{{ scan_date_zorg | date("%d-%m-%Y") }}</strong></h3>
       <p>
       Deze data laat zien of websites van zorginstellingen ondersteuning bieden voor het HTTPS protocol (<code>https://</code>) en hoe sterk de implementatie daarvan is. HTTPS zorgt voor een veilige en niet manipuleerbare internetverbinding tussen websites en haar bezoekers.
       </p>
 
       <p>
-        HTTPS en TLS data zijn voor het laatst verzameld door middel van een scan van het publieke internet op <strong>{{ scan_date | date("%d-%m-%Y") }}</strong>.
+        HTTPS en TLS data zijn voor het laatst verzameld door middel van een scan van het publieke internet op <strong>{{ scan_date_zorg | date("%d-%m-%Y") }}</strong>.
       </p>
     </div>
 
