--- a/templates/https-zorg/domains.html
+++ b/templates/https-zorg/domains.html
@@ -12,7 +12,7 @@
 
   <nav class="tab-menu" role="tablist">
     <span class="tab zorg" role="tab" aria-controls="tab-panel" aria-selected="true">Per Domein</span>
-    <a href="/https-zorg/guidance/" class="tab" role="tab" aria-controls="tab-panel" aria-selected="false">Info</a>
+    <a href="/https-zorg/guidance/" class="tab zorg" role="tab" aria-controls="tab-panel" aria-selected="false">Info</a>
   </nav>
 
   <div id="tab-panel" class="wrapper" role="tabpanel" aria-hidden="false">
