--- a/templates/https-zorg/guide.html
+++ b/templates/https-zorg/guide.html
@@ -11,8 +11,8 @@
 <section id="main-content" class="white-bkg">
 
   <nav class="tab-menu" role="tablist">
-    <a href="/https-zorg/domains/" class="tab" role="tab" aria-controls="tab-panel" aria-selected="false">Per Domein</a>
-    <span class="tab" role="tab" aria-controls="tab-panel" aria-selected="true">Info</span>
+    <a href="/https-zorg/domains/" class="tab zorg" role="tab" aria-controls="tab-panel" aria-selected="false">Per Domein</a>
+    <span class="tab zorg" role="tab" aria-controls="tab-panel" aria-selected="true">Info</span>
   </nav>
 
   <div id="tab-panel" class="wrapper" role="tabpanel" aria-hidden="false">
