--- a/templates/https/agencies.html
+++ b/templates/https/agencies.html
@@ -11,9 +11,9 @@
 <section id="main-content" class="white-bkg">
 
   <nav class="tab-menu" role="tablist">
-    <a href="/https/domains/" class="tab" role="tab" aria-controls="tab-panel" aria-selected="false">Per Domein</a>
-    <span class="tab" role="tab" aria-controls="tab-panel" aria-selected="true">Per Overheid</span>
-    <a href="/https/guidance/" class="tab" role="tab" aria-controls="tab-panel" aria-selected="false">Info</a>
+    <a href="/https/domains/" class="tab overheid" role="tab" aria-controls="tab-panel" aria-selected="false">Per Domein</a>
+    <span class="tab overheid" role="tab" aria-controls="tab-panel" aria-selected="true">Per Overheid</span>
+    <a href="/https/guidance/" class="tab overheid" role="tab" aria-controls="tab-panel" aria-selected="false">Info</a>
   </nav>
 
   <div id="tab-panel" class="wrapper" role="tabpanel" aria-hidden="false">
