--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -246,8 +246,17 @@ a#skipnav {
       .tab-menu {
         width: 100%;
 
-        .tab {
+        .tab.zorg {
           width: 50%;
+          margin: 0;
+          float: left;
+          text-align: center;
+          padding: 30px 0;
+          font-size: 1.5em;
+        }
+
+        .tab.overheid {
+          width: 33.33%;
           margin: 0;
           float: left;
           text-align: center;
