--- a/templates/https/guide.html
+++ b/templates/https/guide.html
@@ -11,9 +11,9 @@
 <section id="main-content" class="white-bkg">
 
   <nav class="tab-menu" role="tablist">
-    <a href="/https/domains/" class="tab" role="tab" aria-controls="tab-panel" aria-selected="false">Per Domein</a>
-    <a href="/https/agencies/" class="tab" role="tab" aria-controls="tab-panel" aria-selected="false">Per Overheid</a>
-    <span class="tab" role="tab" aria-controls="tab-panel" aria-selected="true">Info</span>
+    <a href="/https/domains/" class="tab overheid" role="tab" aria-controls="tab-panel" aria-selected="false">Per Domein</a>
+    <a href="/https/agencies/" class="tab overheid" role="tab" aria-controls="tab-panel" aria-selected="false">Per Overheid</a>
+    <span class="tab overheid" role="tab" aria-controls="tab-panel" aria-selected="true">Info</span>
   </nav>
 
   <div id="tab-panel" class="wrapper" role="tabpanel" aria-hidden="false">
