--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -87,6 +87,10 @@ header {
   background-color: white;
 }
 
+#loading {
+  text-align: center;
+}
+
 footer {
   border-top: 1px solid $light-gray;
   color: black;
