--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -3,7 +3,7 @@
       <div class="footer-text">
         Code open source beschikbaar op <a href="https://github.com/openstate/docker-pulse" target="_blank">GitHub</a>. Gebaseerd op <a href="https://github.com/18F/pulse" target="_blank">Pulse</a> gemaakt door <a href="https://18f.gsa.gov" target="_blank">18F</a>.
 
-        <p>HTTPS klassering komt tot stand door middel van de <a href="https://www.ssllabs.com/" target="_blank">Qualys SSL Labs API</a>.
+        <p>HTTPS klassering komt tot stand via de <a href="https://www.ssllabs.com/" target="_blank">Qualys SSL Labs API</a>.
         </p>
       </div>
       <div id="contact" class="footer-contact">
