--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -12,6 +12,9 @@
                 <a href="/https-zorg/domains/">Zorg</a>
             </li>
             <li>
+                <a href="/https-onderwijs/domains/">Onderwijs</a>
+            </li>
+            <li>
                 <a tabindex="-1" href="#contact">Contact</a>
             </li>
         </ul>
@@ -29,6 +32,9 @@
       </li>
       <li>
           <a tabindex="-1" href="/https-zorg/domains/">Zorg</a>
+      </li>
+      <li>
+          <a tabindex="-1" href="/https-onderwijs/domains/">Onderwijs</a>
       </li>
       <li>
           <a tabindex="-1" href="#contact">Contact</a>
